--- a/build.gradle
+++ b/build.gradle
@@ -16,16 +16,15 @@ buildscript {
 	}
 }
 
-ext.revision = 210
+ext.revision = 211
 
 apply plugin: 'net.minecraftforge.gradle.liteloader'
 apply plugin: 'org.spongepowered.mixin'
 
-archivesBaseName = "MineLittlePony"
 group = 'com.brohoof.minelp'
-version = '1.8.9.0'
+version = '1.8.9.1'
+description = 'Mine Little Pony turns players and mobs into ponies'
 
-ext.startClass = 'com.mumfrey.liteloader.debug.Start'
 minecraft {
 	version = "1.8.9"
 	mappings = 'stable_22'
@@ -50,9 +49,12 @@ sourceSets {
 		compileClasspath += files(deps + [ main.output, api.output ])
 	}
 }
-//project('LiteLoader'){
-//	mcMappings = rootProject.minecraft.mappings
-//}
+litemod.json {
+	name = 'minelp'
+	revision = ext.revision
+	mixinConfigs += ['mixin.minelp.json', 'mixin.hdskins.json']
+	//tweakClass = 'com.brohoof.minelittlepony.launch.MineLPTweaker'
+}
 processResources {
     def props = [
         version:    version,
@@ -70,11 +72,7 @@ processResources {
 }
 
 jar {
-	//afterEvaluate {	manifest.attributes.remove 'TweakClass'}
 	from sourceSets.findAll { it.name != 'api' }*.output
-
-	//extension 'litemod'
-	//appendix "mc$minecraft.version"
 }
 mixin {
     defaultObfuscationEnv notch
