--- a/build.gradle
+++ b/build.gradle
@@ -21,14 +21,14 @@ buildscript {
 	}
 }
 
-ext.revision = 217
+ext.revision = 218
 
 apply plugin: 'net.minecraftforge.gradle.liteloader'
 apply plugin: 'org.spongepowered.mixin'
 apply plugin: 'mnm.gradle.ap-ide'
 
 group = 'com.brohoof.minelp'
-version = '1.9.4.0-beta'
+version = '1.9.4.0'
 description = 'Mine Little Pony'
 
 minecraft {
