--- a/build.gradle
+++ b/build.gradle
@@ -100,6 +100,11 @@ task srgJar(type: Jar) {
 	classifier "mc$minecraft.version-srg"
 	baseName "mod-${project.name.toLowerCase()}"
 }
+task skinZip(type: Zip) {
+	from fileTree('skins')
+	baseName 'Pony Skin Resources'
+	version 'v1'
+}
 
 reobf {
 	srgJar {
