--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ apply plugin: 'org.spongepowered.mixin'
 apply plugin: 'mnm.gradle.ap-ide'
 
 group = 'com.brohoof.minelp'
-version = '1.11.0.0-beta'
+version = '1.11.0.1'
 description = 'Mine Little Pony'
 
 targetCompatibility = 1.8
