--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ apply plugin: 'org.spongepowered.mixin'
 apply plugin: 'mnm.gradle.ap-ide'
 
 group = 'com.minelittlepony'
-version = '1.11.0.2'
+version = '1.11.0.3-beta2'
 description = 'Mine Little Pony'
 
 targetCompatibility = 1.8
